--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,12 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_app"
         android:supportsRtl="true"
-        android:theme="@style/Theme.LLMDemo">
+        android:theme="@style/Theme.EdgeAIDemo">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.LLMDemo">
+            android:theme="@style/Theme.EdgeAIDemo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
